--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,5 +22,6 @@ cxx-build = "1.0"
 half = { version = "2.3.1", features = ["num-traits"] }
 libc = "0.2.168"
 num-traits = "0.2.15"
+ouroboros = "0.17.0"
 thiserror = "2.0.7"
 xctch-sys = { path = "xctch-sys", version = "0.1.0" }
