--- a/xctch-core/Cargo.toml
+++ b/xctch-core/Cargo.toml
@@ -10,6 +10,7 @@ license.workspace = true
 
 [dependencies]
 cxx = { workspace = true }
+ouroboros = { workspace = true }
 xctch-sys = { workspace = true }
 
 [dev-dependencies]
