--- a/xctch-core/Cargo.toml
+++ b/xctch-core/Cargo.toml
@@ -15,3 +15,5 @@ xctch-sys = { workspace = true }
 
 [dev-dependencies]
 anyhow = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
