--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,8 @@ half = { version = "2.3.1", features = ["num-traits"] }
 libc = "0.2.168"
 num-traits = "0.2.15"
 ouroboros = "0.18"
+rand = "0.8.5"
+rand_distr = "0.4.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "2.0.7"
