--- a/xctch-core/Cargo.toml
+++ b/xctch-core/Cargo.toml
@@ -16,5 +16,7 @@ xctch-sys = { workspace = true }
 
 [dev-dependencies]
 anyhow = { workspace = true }
+rand = { workspace = true }
+rand_distr = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
