--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ clap = { version = "4.5", features = ["derive"] }
 cxx = "1.0"
 cxx-build = "1.0"
 half = { version = "2.3.1", features = ["num-traits"] }
+hf-hub = "0.4.1"
 libc = "0.2.168"
 num-traits = "0.2.15"
 ouroboros = "0.18"
@@ -33,5 +34,7 @@ rand_distr = "0.4.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "2.0.7"
+tracing = "0.1.41"
+tracing-subscriber = "0.3.19"
 xctch = { path = "xctch-core", version = "0.4.0" }
 xctch-sys = { path = "xctch-sys", version = "0.4.0" }
